--- a/ch5_example2_jmw.html
+++ b/ch5_example2_jmw.html
@@ -5,18 +5,21 @@
     </head>
     <body>
         <script type="text/javascript">
-            function checkCharType(charToCheck){
-                var returnValue = 'O';
-                var charCode = charToCheck.charCodeAt(0);
+        // Changing the exercise to take a string and re-write it with its case code.
 
-                if (charCode >='A'.charCodeAt(0) && charCode <='Z'.charCodeAt(0)){
-                    returnValue = "U";
-                }else if (charCode >= 'a'.charCodeAt(0) && charCode <='z'.charCodeAt(0)){
-                    returnValue = 'L';
-                }else if (charCode >='0'.charCodeAt(0) && charCode <='9'.charCodeAt(0)){
-                    returnValue = 'N';
-                }else if (charCode == 32){
-                    return ' ';
+            function checkCharType(charToCheck){
+                var returnValue = 'O';  //default code
+
+                if (charToCheck >='A'.charCodeAt(0) && charToCheck <='Z'.charCodeAt(0)){
+                    returnValue = "U";  //Upper Case
+                }else if (charToCheck >= 'a'.charCodeAt(0) && charToCheck <='z'.charCodeAt(0)){
+                    returnValue = 'L';  //Lower Case    
+                }else if (charToCheck >='0'.charCodeAt(0) && charToCheck <='9'.charCodeAt(0)){
+                    returnValue = 'N';  //Number
+                }else if (charToCheck == 32){
+                    return ' ';         //Space
+                }else{
+                    returnValue="E";    //Error (non character, number, or space)
                 }
 
                 return returnValue;
@@ -24,23 +27,20 @@
 
             var myString = prompt('Enter some text','Hello World!');
 
-            console.log('length of mystring:' + myString.length);
+            //console.log('length of mystring:' + myString.length);
 
             var currentChar = 'a';
 
-            for (var position=0; position < myString.length-1; position++){
+            for (var position=0; position <= myString.length-1; position++){
 
-                console.log(myString.charCodeAt(position));
+                //console.log(myString.charAt(position));
+                //console.log(myString.charCodeAt(position));
                 currentChar = myString.charCodeAt(position);
-                console.log('current char= ' + currentChar);
+                //console.log('current char= ' + currentChar);
                 var currentCharCase = checkCharType(currentChar);
-
-                //document.write(currentCharCase);
+                //console.log('current char case = ' + currentCharCase); 
+                document.write(currentCharCase);
             }
-
-
-
-
 
         </script>
     </body>
